--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
 
         }
 
+        setInterval(() => {
+            refresh()
+        }, 30000)
+
         function createNotification(content) {
             const app = document.getElementById('app')
 
