typo: 창 투명도 -> 불투명도

--- a/settings.html
+++ b/settings.html
@@ -73,7 +73,7 @@
 <body>
     <div class="container">
         <h1 style="margin-bottom: 10px;">설정</h1>
-        <p style="margin-bottom: 3px;">창 투명도:</p>
+        <p style="margin-bottom: 3px;">창 불투명도:</p>
         <input type="range" min="50" max="255" value="210" class="slider" id="opacity" oninput="changeOpacity()">
 
         <p style="margin-bottom: 3px;">시작 프로그램으로:</p>
